--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <h2 id="clock"> 00:00:00</h2>
     <h1 class="hidden" id="greeting"></h1>
     <br>
+
+    <form id="todo-form">
+        <input required type="text" placeholder="Write a To Do and Press Enter.">
+    </form>
+
+    <!--js로 리스트를 추가할 부분-->
+    <ul id="todo-list"></ul>
+
     <div id="quote">
         <span></span>
         <span></span>
@@ -26,6 +34,8 @@
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+
 
 </body>
 </html>
